    *) The test '07_fast_mmap.t' tests now deferring & states of values
    *) Fix few bug with target locking
    *) Fixed unproductive code piece of value with expiring
    *) Fixed unproductive code with target locking
    *) Changed some tests for testing the 'actual_term' option
    +) Added stats  for operations 'run' & 'dependencies_lookup'
    +) Added the bit state CASCADE_ACTUAL_TERM
    +) Added 'ttl' feature. No docs yet but there is tests for it
    +) CHI::Cascade->rule now has the new option: value_expires
    *) Memcached tests are skipped by default. They use a starting of memcached
       and from cpanm they doesn't work. If you want to tests please use this
       method: perl Makefile.PL; FORCE_MEMCACHED_TESTS= make test && make install
    +) Added stack for targets for circled dependencies die (now it prints stack)
    *) Fixed bug with circled dependencies - now more accurate (no tests)

0.25001
    *) Few fix - should improve tests

0.25
    +) Some improvements
    *) For backward compatibility with perl < 5.9 the operator '$a // $b' is
       changed to long style as 'defined($a) ? $a : $b'. It should improve a
       tests on old perl installations

0.24_01
    +) Added 'parent' module in requires for old perl installation (<=5.10.0)

0.24 (stable)
    *) Fixed bug with tests with memcached

0.23
    +) Queues for non blocking running - to see test t/lib/test_04.pm
       (no docs yet)
    +) Added test '07_fast_mmap.t' for queue-ing
    *) Fix some bugs
    +) Added bits for values (no docs yet) and not finished yet.

0.22
    +) Added the option 'target_chi' - target markers can be kept in other CHI
       cache than data of targets. It's useful for l1_cache's caches of CHI

0.21
    *) A detection of circle dependencies is improved (not tested)

0.20
    +) Some optimization
    *) Few fixes of documentation
    +) Added option 'depends_catch' to rule as catcher callback for dependencies

0.19