@@ -1,7 +1,5 @@
 I would want to do (may be you want to do yourself and push request to github?:)
 But if upi want to help please let me know before (may be i do it right now)
 
-    - depends_actual_term (scalar and arrayref for random times as min & max)
-    - actual_term should be as arrayref too (random times - min & max)
     - To need corrections of my English in docs (my English is not well as i
       want)
